# chatOA

./: logging.txt  main.py  pyproject.toml
app/: app.py  formInfo.json  processInfo.json
tests/: fetch.test.js  test.py
web/: .env  package.json  pnpm-lock.yaml
web/src/: App.tsx
web/src/api/: applyLeave.ts  chat.ts  request.ts
web/src/components/: ChatInput.tsx
web/src/tests/: fetchTest.js
web/src/types/: AppllyLeave.ts
zero/: day01.py
